2014-04-28  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs
	* examples/site-lib/clm-ins.fs
	* examples/site-lib/draw.fs
	* examples/site-lib/dsp.fs
	* examples/site-lib/env.fs
	* examples/site-lib/effects.fs
	* examples/site-lib/examp.fs
	* examples/site-lib/extensions.fs
	* examples/site-lib/popup.fs
	* examples/site-lib/rubber.fs
	* examples/site-lib/snd-forth-init.fs: Rename all words
	containing frames with framples.

	* examples/site-lib/clm.fs (play-sound, record-sound): Removed.

	* examples/site-lib/clm-ins.fs (fullmix): Removed.

	* examples/site-lib/examp.fs (env-sound-interp,
	granualted-sound-interp): Replace deprecated sound-data
	words with with-sound calls.

2014-04-27  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/mix.fs (save-mix, save-mixes): Removed.

	* examples/site-lib/hooks.fs (dac-hook, stop-dac-hook):
	Removed.

	* examples/site-lib/extensions.fs (local-dac-func): Removed.

2014-02-19  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/string.c (string-cmp): New word which returns -1, 0, 1
	according to s1 is less than, equal to, or greater than s2.

2014-01-30  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/fth-lib.h, src/proc.c, src/symbol.c (FTH_*_SYMBOL):
	Macros renamed (old names can still be used):
	FTH_DOCUMENTATION_SYMBOL --> FTH_SYMBOL_DOCUMENTATION
	FTH_LAST_MESSAGE_SYMBOL	--> FTH_SYMBOL_LAST_MESSAGE
	FTH_MESSAGE_SYMBOL	--> FTH_SYMBOL_MESSAGE
	FTH_SOURCE_SYMBOL	--> FTH_SYMBOL_SOURCE
	FTH_TRACE_VAR_SYMBOL	--> FTH_SYMBOL_TRACE_VAR

2014-01-23  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* ficl/vm.c (ficlVmTextIn|Out, ficlVmErrorOut): Superfluouse
	public functions removed.  Use ficlCallbackDefaultTextIn|Out and
	ficlCallbackDefaultErrorOut instead.

2014-01-22  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/fth-lib.h (c__FUNCTION__): Macro removed.

2014-01-20  Michael Scholz  <mi-scholz@users.sourceforge.net>
