@@ -2,9 +2,9 @@
 
 \ Translator/Author: Michael Scholz <mi-scholz@users.sourceforge.net>
 \ Created: 05/07/05 13:09:37
-\ Changed: 14/04/28 03:52:17
+\ Changed: 14/11/04 00:30:54
 \
-\ @(#)examp.fs	1.62 4/28/14
+\ @(#)examp.fs	1.64 11/4/14
 
 \ With original comments and doc strings from examp.scm.
 \
@@ -385,7 +385,7 @@ It is intended for use with after-transform-hook."
 	       file mus-sound-chans
 	       file mus-sound-srate
 	       file mus-sound-header-type mus-header-type-name
-	       file mus-sound-data-format mus-data-format-name
+	       file mus-sound-sample-type mus-data-format-name
 	       file mus-sound-samples
 	       file mus-sound-chans
 	       file mus-sound-srate f* f/ ) string-format
